--- a/srcwww/tomato-sauce/package.json
+++ b/srcwww/tomato-sauce/package.json
@@ -20,9 +20,11 @@
     "@angular/platform-browser": "^17.3.0",
     "@angular/platform-browser-dynamic": "^17.3.0",
     "@angular/router": "^17.3.0",
+    "@ng-select/ng-select": "^12.0.7",
     "angular-split": "^17.2.0",
     "ng": "^0.0.0",
     "ng-split": "^0.2.0",
+    "ngx-quill": "^26.0.5",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.3"
